add_executable(CommonPatterns CommonPatterns.cpp DiscreteFunction.cpp)
target_include_directories(CommonPatterns PUBLIC ${CMAKE_SOURCE_DIR}/include)

target_compile_features(CommonPatterns PUBLIC cxx_std_17)
set_target_properties(CommonPatterns PROPERTIES CXX_STANDARD_REQUIRED ON CXX_EXTENSIONS OFF)